Add AUTHORS section to the manual

--- a/genpass.1
+++ b/genpass.1
@@ -34,3 +34,8 @@ are specified, a password including alphanumeric characters and
 symbols will be generated.
 .Sh EXIT STATUS
 .Ex -std
+.Sh AUTHORS
+The
+.Nm
+utility was written by
+.An Henry Ford Aq Mt fordhenry2299@gmail.com
